--- a/pom.xml
+++ b/pom.xml
@@ -23,13 +23,13 @@
 <distributionManagement>
     <repository>
         <id>central</id>
-        <name>Parvezs-MacBook-Pro.local-releases</name>
-        <url>http://localhost:8081/artifactory/maven_central</url>
+        <name>local-releases</name>
+        <url>http://localhost:8080/artifactory/maven_central</url>
     </repository>
     <snapshotRepository>
         <id>snapshots</id>
-        <name>Parvezs-MacBook-Pro.local-snapshots</name>
-        <url>http://localhost:8081/artifactory/demo-snapshot-local</url>
+        <name>local-snapshots</name>
+        <url>http://localhost:8080/artifactory/demo-snapshot-local</url>
     </snapshotRepository>
 </distributionManagement>
   <build>
