--- a/pom.xml
+++ b/pom.xml
@@ -15,6 +15,11 @@
     <version>4.12</version>
 </dependency>
 <dependency>
+  <groupId>maven</groupId>
+  <artifactId>maven-resources-plugin</artifactId>
+  <version>2.6</version>
+ <dependency>
+<dependency>
     <groupId>javax.servlet</groupId>
     <artifactId>servlet-api</artifactId>
     <version>2.5</version>
