--- a/pom.xml
+++ b/pom.xml
@@ -18,7 +18,7 @@
   <groupId>maven</groupId>
   <artifactId>maven-resources-plugin</artifactId>
   <version>2.6</version>
- <dependency>
+ </dependency>
 <dependency>
     <groupId>javax.servlet</groupId>
     <artifactId>servlet-api</artifactId>
